syntax = "proto3";

package user_balance;
option go_package = "proto/";

message GetUserBalanceRequest {
    string user_id = 1;
}

message GetUserBalanceResponse {
    int32 balance = 1;
}

message ChangeUserBalanceRequest {
    string user_id = 1;
    string transaction_id = 2;
    int32 amount = 3;
}

message AddAllUserBalanceRequest {
    string transaction_id = 1;
    int32 amount = 2;
}

message EmptyResponse {}

service UserBalance {
    rpc GetBalanceByUserID(GetUserBalanceRequest) returns (GetUserBalanceResponse) {};
    rpc ChangeBalanceByUserID(ChangeUserBalanceRequest) returns (EmptyResponse) {};
    rpc AddAllUserBalance(AddAllUserBalanceRequest) returns (EmptyResponse) {};
}
